add_library(Common)

welder_setup_library(Common ${CMAKE_CURRENT_LIST_DIR})
welder_use_precompiled_header(Common ${CMAKE_CURRENT_LIST_DIR})

set(WELDER_COMMON_VISUALIZER "")

if ("${CMAKE_GENERATOR}" MATCHES "Visual Studio*")
    set(WELDER_COMMON_VISUALIZER "${CMAKE_CURRENT_LIST_DIR}/Visualizers.natvis")
endif()

target_sources(Common
  PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/Algorithm.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Allocator.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Array.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ArrayMap.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ArraySet.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Atomic.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Audio.hpp
    ${CMAKE_CURRENT_LIST_DIR}/BasicNativeTypes.inl
    ${CMAKE_CURRENT_LIST_DIR}/BasicNativeTypesMath.inl
    ${CMAKE_CURRENT_LIST_DIR}/BitField.hpp
    ${CMAKE_CURRENT_LIST_DIR}/BitMath.hpp
    ${CMAKE_CURRENT_LIST_DIR}/BitStream.cpp
    ${CMAKE_CURRENT_LIST_DIR}/BitStream.hpp
    ${CMAKE_CURRENT_LIST_DIR}/BitStream.inl
    ${CMAKE_CURRENT_LIST_DIR}/BitTypes.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Block.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Block.hpp
    ${CMAKE_CURRENT_LIST_DIR}/BlockArray.hpp
    ${CMAKE_CURRENT_LIST_DIR}/BlockVector3.cpp
    ${CMAKE_CURRENT_LIST_DIR}/BlockVector3.hpp
    ${CMAKE_CURRENT_LIST_DIR}/BoolVector2.cpp
    ${CMAKE_CURRENT_LIST_DIR}/BoolVector2.hpp
    ${CMAKE_CURRENT_LIST_DIR}/BoolVector3.cpp
    ${CMAKE_CURRENT_LIST_DIR}/BoolVector3.hpp
    ${CMAKE_CURRENT_LIST_DIR}/BoolVector4.cpp
    ${CMAKE_CURRENT_LIST_DIR}/BoolVector4.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Browser.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ByteBuffer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ByteBuffer.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ByteColor.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ByteEnum.hpp
    ${CMAKE_CURRENT_LIST_DIR}/CallStack.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Callback.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Callback.hpp
    ${CMAKE_CURRENT_LIST_DIR}/CharacterTraits.cpp
    ${CMAKE_CURRENT_LIST_DIR}/CharacterTraits.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ColorDefinitions.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ComPort.hpp
    ${CMAKE_CURRENT_LIST_DIR}/CommonForwardDeclarations.hpp
    ${CMAKE_CURRENT_LIST_DIR}/CommonStandard.cpp
    ${CMAKE_CURRENT_LIST_DIR}/CommonStandard.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ConditionalRange.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ConjugateGradient.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Console.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Console.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ContainerCommon.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ContainerCommon.hpp
    ${CMAKE_CURRENT_LIST_DIR}/CrashHandler.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Curve.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Curve.hpp
    ${CMAKE_CURRENT_LIST_DIR}/CyclicArray.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Debug.hpp
    ${CMAKE_CURRENT_LIST_DIR}/DebugSymbolInformation.hpp
    ${CMAKE_CURRENT_LIST_DIR}/DecomposedMatrix4.cpp
    ${CMAKE_CURRENT_LIST_DIR}/DecomposedMatrix4.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Determinism.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Determinism.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Diagnostic.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Diagnostic.hpp
    ${CMAKE_CURRENT_LIST_DIR}/DirectoryWatcher.cpp
    ${CMAKE_CURRENT_LIST_DIR}/DirectoryWatcher.hpp
    ${CMAKE_CURRENT_LIST_DIR}/EnumDeclaration.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ErrorCallbacks.hpp
    ${CMAKE_CURRENT_LIST_DIR}/EulerAngles.cpp
    ${CMAKE_CURRENT_LIST_DIR}/EulerAngles.hpp
    ${CMAKE_CURRENT_LIST_DIR}/EulerOrder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/EulerOrder.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ExecutableResource.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ExtendableMath.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ExtendableMath.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ExternalLibrary.hpp
    ${CMAKE_CURRENT_LIST_DIR}/File.cpp
    ${CMAKE_CURRENT_LIST_DIR}/File.hpp
    ${CMAKE_CURRENT_LIST_DIR}/FileEvents.cpp
    ${CMAKE_CURRENT_LIST_DIR}/FileEvents.hpp
    ${CMAKE_CURRENT_LIST_DIR}/FilePath.cpp
    ${CMAKE_CURRENT_LIST_DIR}/FilePath.hpp
    ${CMAKE_CURRENT_LIST_DIR}/FileSystem.cpp
    ${CMAKE_CURRENT_LIST_DIR}/FileSystem.hpp
    ${CMAKE_CURRENT_LIST_DIR}/FixedString.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ForEachRange.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ForEachRange.hpp
    ${CMAKE_CURRENT_LIST_DIR}/FpControl.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Functor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Functor.hpp
    ${CMAKE_CURRENT_LIST_DIR}/GaussSeidelSolver.hpp
    ${CMAKE_CURRENT_LIST_DIR}/GenericVector.hpp
    ${CMAKE_CURRENT_LIST_DIR}/GenericVector.inl
    ${CMAKE_CURRENT_LIST_DIR}/Graph.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Graph.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Guid.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Guid.hpp
    ${CMAKE_CURRENT_LIST_DIR}/HalfFloat.cpp
    ${CMAKE_CURRENT_LIST_DIR}/HalfFloat.hpp
    ${CMAKE_CURRENT_LIST_DIR}/HashMap.hpp
    ${CMAKE_CURRENT_LIST_DIR}/HashSet.hpp
    ${CMAKE_CURRENT_LIST_DIR}/HashedContainer.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Hashing.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Heap.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Heap.hpp
    ${CMAKE_CURRENT_LIST_DIR}/IdSequence.hpp
    ${CMAKE_CURRENT_LIST_DIR}/IdStore.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Image.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Image.hpp
    ${CMAKE_CURRENT_LIST_DIR}/InList.hpp
    ${CMAKE_CURRENT_LIST_DIR}/IndexPolicies.hpp
    ${CMAKE_CURRENT_LIST_DIR}/IntVector2.cpp
    ${CMAKE_CURRENT_LIST_DIR}/IntVector2.hpp
    ${CMAKE_CURRENT_LIST_DIR}/IntVector3.cpp
    ${CMAKE_CURRENT_LIST_DIR}/IntVector3.hpp
    ${CMAKE_CURRENT_LIST_DIR}/IntVector4.cpp
    ${CMAKE_CURRENT_LIST_DIR}/IntVector4.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Intrinsics.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Intrinsics.hpp
    ${CMAKE_CURRENT_LIST_DIR}/IpAddress.cpp
    ${CMAKE_CURRENT_LIST_DIR}/IpAddress.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ItemCache.hpp
    ${CMAKE_CURRENT_LIST_DIR}/JacobiSolver.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Lexer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Lexer.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Lexer.inl
    ${CMAKE_CURRENT_LIST_DIR}/LocalStackAllocator.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Lock.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Log2.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Main.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Main.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MainLoop.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Math.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Math.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MathImports.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MathToString.cpp
    ${CMAKE_CURRENT_LIST_DIR}/MathToString.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Matrix2.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Matrix2.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Matrix3.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Matrix3.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Matrix4.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Matrix4.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MatrixStorage.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MaxSizeof.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Memory.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Misc.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Misc.hpp
    ${CMAKE_CURRENT_LIST_DIR}/NativeType.cpp
    ${CMAKE_CURRENT_LIST_DIR}/NativeType.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Numerical.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Numerical.hpp
    ${CMAKE_CURRENT_LIST_DIR}/OrderedHashMap.hpp
    ${CMAKE_CURRENT_LIST_DIR}/OrderedHashSet.hpp
    ${CMAKE_CURRENT_LIST_DIR}/OsHandle.hpp
    ${CMAKE_CURRENT_LIST_DIR}/OwnedArray.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Peripherals.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Permuter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Permuter.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Platform.hpp
    ${CMAKE_CURRENT_LIST_DIR}/PlatformStandard.hpp
    ${CMAKE_CURRENT_LIST_DIR}/PointerCast.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Pool.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Pool.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Precompiled.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Precompiled.hpp
    ${CMAKE_CURRENT_LIST_DIR}/PrivateImplementation.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Process.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Process.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Quaternion.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Quaternion.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Random.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Random.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Reals.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Reals.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Rect.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Regex.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Regex.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Registry.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Renderer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Renderer.hpp
    ${CMAKE_CURRENT_LIST_DIR}/RendererEnumerations.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Resolution.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Rune.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Rune.hpp
    ${CMAKE_CURRENT_LIST_DIR}/SharedVectorFunctions.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Shell.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Shell.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Singleton.hpp
    ${CMAKE_CURRENT_LIST_DIR}/SlotMap.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Socket.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Socket.hpp
    ${CMAKE_CURRENT_LIST_DIR}/SocketConstants.hpp
    ${CMAKE_CURRENT_LIST_DIR}/SocketEnums.hpp
    ${CMAKE_CURRENT_LIST_DIR}/SortedArray.hpp
    ${CMAKE_CURRENT_LIST_DIR}/SpinLock.cpp
    ${CMAKE_CURRENT_LIST_DIR}/SpinLock.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Stack.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Stack.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Standard.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Standard.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Status.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Status.hpp
    ${CMAKE_CURRENT_LIST_DIR}/StdArray.hpp
    ${CMAKE_CURRENT_LIST_DIR}/StdAssociative.hpp
    ${CMAKE_CURRENT_LIST_DIR}/StdString.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Stream.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Stream.hpp
    ${CMAKE_CURRENT_LIST_DIR}/String.cpp
    ${CMAKE_CURRENT_LIST_DIR}/String.hpp
    ${CMAKE_CURRENT_LIST_DIR}/StringBuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/StringBuilder.hpp
    ${CMAKE_CURRENT_LIST_DIR}/StringConversion.cpp
    ${CMAKE_CURRENT_LIST_DIR}/StringConversion.hpp
    ${CMAKE_CURRENT_LIST_DIR}/StringRange.cpp
    ${CMAKE_CURRENT_LIST_DIR}/StringRange.hpp
    ${CMAKE_CURRENT_LIST_DIR}/StringUtility.cpp
    ${CMAKE_CURRENT_LIST_DIR}/StringUtility.hpp
    ${CMAKE_CURRENT_LIST_DIR}/TextStream.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Thread.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Thread.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ThreadSync.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ThreadableLoop.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ThreadableLoop.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Time.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Time.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Timer.hpp
    ${CMAKE_CURRENT_LIST_DIR}/TimerBlock.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ToString.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ToString.hpp
    ${CMAKE_CURRENT_LIST_DIR}/TypeTraits.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Typedefs.hpp
    ${CMAKE_CURRENT_LIST_DIR}/UintNType.hpp
    ${CMAKE_CURRENT_LIST_DIR}/UnicodeUtility.cpp
    ${CMAKE_CURRENT_LIST_DIR}/UnicodeUtility.hpp
    ${CMAKE_CURRENT_LIST_DIR}/UniquePointer.hpp
    ${CMAKE_CURRENT_LIST_DIR}/UnsortedMap.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Utilities.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utilities.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Variant.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Variant.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Variant.inl
    ${CMAKE_CURRENT_LIST_DIR}/VariantConfig.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Vector2.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Vector2.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Vector3.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Vector3.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Vector3.inl
    ${CMAKE_CURRENT_LIST_DIR}/Vector4.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Vector4.hpp
    ${CMAKE_CURRENT_LIST_DIR}/VectorHashPolicy.hpp
    ${CMAKE_CURRENT_LIST_DIR}/VirtualAny.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Web.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Web.hpp
    ${CMAKE_CURRENT_LIST_DIR}/WebRequest.cpp
    ${CMAKE_CURRENT_LIST_DIR}/WebRequest.hpp
    ${CMAKE_CURRENT_LIST_DIR}/WeightedProbabilityTable.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ZeroAllocator.hpp
    ${WELDER_COMMON_VISUALIZER}
)
