add_library(Content)

welder_setup_library(Content ${CMAKE_CURRENT_LIST_DIR} TRUE)
welder_use_precompiled_header(Content ${CMAKE_CURRENT_LIST_DIR})

target_sources(Content
  PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/AnimationProcessor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/AnimationProcessor.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ArchetypeProcessor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ArchetypeProcessor.hpp
    ${CMAKE_CURRENT_LIST_DIR}/AudioContent.cpp
    ${CMAKE_CURRENT_LIST_DIR}/AudioContent.hpp
    ${CMAKE_CURRENT_LIST_DIR}/AudioFileEncoder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/AudioFileEncoder.hpp
    ${CMAKE_CURRENT_LIST_DIR}/BaseBuilders.cpp
    ${CMAKE_CURRENT_LIST_DIR}/BaseBuilders.hpp
    ${CMAKE_CURRENT_LIST_DIR}/BinaryContent.cpp
    ${CMAKE_CURRENT_LIST_DIR}/BinaryContent.hpp
    ${CMAKE_CURRENT_LIST_DIR}/BuildOptions.cpp
    ${CMAKE_CURRENT_LIST_DIR}/BuildOptions.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ContentComposition.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ContentComposition.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ContentEnumerations.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ContentItem.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ContentItem.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ContentLibrary.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ContentLibrary.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ContentStandard.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ContentStandard.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ContentSystem.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ContentSystem.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ContentUtility.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ContentUtility.hpp
    ${CMAKE_CURRENT_LIST_DIR}/CubemapProcessing.cpp
    ${CMAKE_CURRENT_LIST_DIR}/CubemapProcessing.hpp
    ${CMAKE_CURRENT_LIST_DIR}/DataContent.cpp
    ${CMAKE_CURRENT_LIST_DIR}/DataContent.hpp
    ${CMAKE_CURRENT_LIST_DIR}/FileExtensionManager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/FileExtensionManager.hpp
    ${CMAKE_CURRENT_LIST_DIR}/GeometryContent.cpp
    ${CMAKE_CURRENT_LIST_DIR}/GeometryContent.hpp
    ${CMAKE_CURRENT_LIST_DIR}/GeometryImporter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/GeometryImporter.hpp
    ${CMAKE_CURRENT_LIST_DIR}/GeometryProcessorDataStructures.hpp
    ${CMAKE_CURRENT_LIST_DIR}/GeometryUtility.cpp
    ${CMAKE_CURRENT_LIST_DIR}/GeometryUtility.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ImageContent.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ImageContent.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ImportOptions.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ImportOptions.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MeshBuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/MeshBuilder.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MeshProcessor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/MeshProcessor.hpp
    ${CMAKE_CURRENT_LIST_DIR}/PhysicsMeshProcessor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/PhysicsMeshProcessor.hpp
    ${CMAKE_CURRENT_LIST_DIR}/PivotProcessor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/PivotProcessor.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Precompiled.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Precompiled.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ResourceLoaderTemplates.hpp
    ${CMAKE_CURRENT_LIST_DIR}/RichAnimation.cpp
    ${CMAKE_CURRENT_LIST_DIR}/RichAnimation.hpp
    ${CMAKE_CURRENT_LIST_DIR}/SkeletonProcessor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/SkeletonProcessor.hpp
    ${CMAKE_CURRENT_LIST_DIR}/SpriteBuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/SpriteBuilder.hpp
    ${CMAKE_CURRENT_LIST_DIR}/SupportComponents.cpp
    ${CMAKE_CURRENT_LIST_DIR}/SupportComponents.hpp
    ${CMAKE_CURRENT_LIST_DIR}/TagsContent.cpp
    ${CMAKE_CURRENT_LIST_DIR}/TagsContent.hpp
    ${CMAKE_CURRENT_LIST_DIR}/TextContent.cpp
    ${CMAKE_CURRENT_LIST_DIR}/TextContent.hpp
    ${CMAKE_CURRENT_LIST_DIR}/TextureBuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/TextureBuilder.hpp
    ${CMAKE_CURRENT_LIST_DIR}/TextureImporter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/TextureImporter.hpp
    ${CMAKE_CURRENT_LIST_DIR}/TextureProcessor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/TextureProcessor.hpp
    ${CMAKE_CURRENT_LIST_DIR}/VectorContent.cpp
    ${CMAKE_CURRENT_LIST_DIR}/VectorContent.hpp
    ${CMAKE_CURRENT_LIST_DIR}/VertexDescriptionBuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/VertexDescriptionBuilder.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ZilchPluginContent.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ZilchPluginContent.hpp
    ${CMAKE_CURRENT_LIST_DIR}/stb_vorbis.cpp
    ${CMAKE_CURRENT_LIST_DIR}/stb_vorbis.h
)

welder_target_includes(Content
  PUBLIC
    Common
    Zilch
    assimp
    ZLib
    Opus
    Nvtt
)
