add_library(Nvtt)

welder_setup_library(Nvtt ${CMAKE_CURRENT_LIST_DIR})
welder_use_precompiled_header(Nvtt ${CMAKE_CURRENT_LIST_DIR})
welder_source_ignore_precompiled_header(${CMAKE_CURRENT_LIST_DIR}/Repo/extern/poshlib/posh.c)

target_sources(Nvtt
  PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/Repo/extern/poshlib/posh.c
    ${CMAKE_CURRENT_LIST_DIR}/Repo/extern/poshlib/posh.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc6h/bits.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc6h/shapes_two.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc6h/tile.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc6h/zoh.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc6h/zoh.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc6h/zoh_utils.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc6h/zoh_utils.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc6h/zohone.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc6h/zohtwo.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/avpcl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/avpcl.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/avpcl_mode0.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/avpcl_mode1.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/avpcl_mode2.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/avpcl_mode3.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/avpcl_mode4.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/avpcl_mode5.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/avpcl_mode6.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/avpcl_mode7.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/avpcl_utils.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/avpcl_utils.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/bits.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/endpts.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/shapes_three.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/shapes_two.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/bc7/tile.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/Array.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/Debug.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/Debug.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/DefsGnucDarwin.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/DefsGnucLinux.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/DefsGnucWin32.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/DefsVcWin32.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/FileSystem.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/FileSystem.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/ForEach.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/Memory.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/Memory.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/Ptr.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/RefCounted.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/StrLib.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/StrLib.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/Stream.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/TextWriter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/TextWriter.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/Timer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/Timer.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/Utils.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvcore/nvcore.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/BlockDXT.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/BlockDXT.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/ColorBlock.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/ColorBlock.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/DirectDrawSurface.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/DirectDrawSurface.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/ErrorMetric.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/ErrorMetric.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/Filter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/Filter.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/FloatImage.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/FloatImage.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/Image.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/Image.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/ImageIO.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/ImageIO.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/KtxFile.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/KtxFile.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/KtxFile.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/NormalMap.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/NormalMap.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/PixelFormat.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/PsdFile.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/TgaFile.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvimage/nvimage.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Box.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Box.inl
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Color.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Color.inl
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Fitting.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Fitting.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Gamma.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Gamma.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Half.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Half.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Matrix.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Matrix.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Matrix.inl
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Plane.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Plane.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Plane.inl
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/SphericalHarmonic.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/SphericalHarmonic.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Vector.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/Vector.inl
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvmath/nvmath.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvthread/Atomic.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvthread/Event.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvthread/Event.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvthread/Mutex.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvthread/Mutex.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvthread/ParallelFor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvthread/ParallelFor.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvthread/Thread.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvthread/Thread.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvthread/ThreadPool.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvthread/ThreadPool.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvthread/nvthread.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvthread/nvthread.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/BlockCompressor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/BlockCompressor.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/ClusterFit.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/ClusterFit.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CompressionOptions.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CompressionOptions.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/Compressor.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CompressorDX10.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CompressorDX10.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CompressorDX11.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CompressorDX11.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CompressorDX9.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CompressorDX9.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CompressorDXT1.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CompressorDXT1.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CompressorDXT5_RGBM.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CompressorDXT5_RGBM.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CompressorETC.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CompressorETC.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CompressorRGB.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CompressorRGB.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/Context.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/Context.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CubeSurface.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/CubeSurface.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/InputOptions.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/InputOptions.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/OptimalCompressDXT.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/OptimalCompressDXT.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/OutputOptions.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/OutputOptions.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/QuickCompressDXT.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/QuickCompressDXT.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/SingleColorLookup.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/SingleColorLookup.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/Surface.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/Surface.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/TaskDispatcher.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/TaskDispatcher.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/cuda/BitmapTable.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/cuda/CudaCompressorDXT.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/cuda/CudaCompressorDXT.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/cuda/CudaMath.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/cuda/CudaUtils.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/cuda/CudaUtils.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/nvtt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/nvtt.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/nvtt_wrapper.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/nvtt_wrapper.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/squish/colourblock.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/squish/colourblock.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/squish/colourfit.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/squish/colourfit.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/squish/colourset.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/squish/colourset.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/squish/config.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/squish/fastclusterfit.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/squish/fastclusterfit.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/squish/maths.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/squish/maths.h
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/squish/weightedclusterfit.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/nvtt/squish/weightedclusterfit.h
    ${CMAKE_CURRENT_LIST_DIR}/nvconfig.h
    ${CMAKE_CURRENT_LIST_DIR}/Precompiled.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Precompiled.hpp
)

target_include_directories(Nvtt
  PUBLIC
    ${CMAKE_CURRENT_LIST_DIR}/Repo/src/
    ${CMAKE_CURRENT_LIST_DIR}/Repo/extern/poshlib/
)
